Add Generics to the 'tsm' package.