@@ -3,13 +3,18 @@ package tfw.value;
 /**
  * An integer value constraint.
  */
-public class LongConstraint extends RangeConstraint {
+public class LongConstraint extends RangeConstraint<Long> {
     /**
      * Creates a constraint with the specified attributes.
      * @param min the minimum legal value.
      * @param max the maximum legal value.
      */
     public LongConstraint(long min, long max) {
-        super(Integer.class, new Long(min), new Long(max), true, true);
+        super(Long.class, Long.valueOf(min), Long.valueOf(max), true, true);
+    }
+
+    @Override
+    protected int compareTo(Long left, Long right) {
+        return left.compareTo(right);
     }
 }
